# cryptforge

./: .gitignore  CODE_DOCUMENTATION.md  CONTRIBUTING.md  DESIGN_PHILOSOPHY.md  LICENSE  README.md  RELEASE_NOTES.md  SOCIAL_MEDIA.md  cli.py  config.py  launcher.bat  launcher.sh  main.py  pyproject.toml  seed-prompt.md  test_file.txt  test_file.txt.enc
logics/: aes.py  alphabets.py  base.py  ciphers.py  encodings.py  modern.py  polybius.py  transforms.py  xor.py
unit_tests/: run_all.py  test_aes.py  test_alphabets.py  test_ciphers.py  test_encodings.py  test_modern.py  test_polybius.py  test_transforms.py  test_xor.py
utils/: context_menu.py  file_ops.py  history.py  interactive.py  logging.py  plugin_loader.py  security.py
