[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cryptforge"
version = "0.0.10"
description = "A modular, cross-platform CLI tool for encryption, decryption, and encoding."
readme = "README.md"
authors = [
    { name = "Krishna Kanth B.", email = "krishnakanthb13@users.noreply.github.com" }
]
license = { text = "GPL-3.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Security :: Cryptography"
]
dependencies = [
    "cryptography>=41.0.0"
]
requires-python = ">=3.8"

[project.scripts]
cryptforge = "cli:run"

[tool.setuptools]
py-modules = ["cli", "main", "config"]
packages = ["logics", "utils", "unit_tests"]
